// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component Should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  
  <textarea
    className="Textarea__Textfield-iRGmWe guuUBm"
    id=""
    maxLength={300}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    value=""
  />
  <div
    className="Textarea__Infos-iMOYiF kMVOQt"
  >
    
    <span
      className="Textarea__Countdown-hnGDxP iENyId"
    >
      300
    </span>
  </div>
</div>
`;

exports[`Radio component with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  <label
    className="Label-bxMjsr iZhmvb"
    htmlFor="textarea"
  >
     
    Text label
     
  </label>
  <textarea
    className="Textarea__Textfield-iRGmWe guuUBm"
    id="textarea"
    maxLength={300}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    value=""
  />
  <div
    className="Textarea__Infos-iMOYiF kMVOQt"
  >
    
    <span
      className="Textarea__Countdown-hnGDxP iENyId"
    >
      300
    </span>
  </div>
</div>
`;

exports[`Radio component with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  
  <textarea
    className="Textarea__Textfield-iRGmWe bMrnKe"
    id=""
    maxLength={300}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    value=""
  />
  <div
    className="Textarea__Infos-iMOYiF kMVOQt"
  >
    <div
      className="ErrorMessage-eJhZpN jUpnFq"
    >
      Error message
    </div>
    <span
      className="Textarea__Countdown-hnGDxP iENyId"
    >
      300
    </span>
  </div>
</div>
`;
